# Var2Stat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dump_config.py  generate_fonts.py  pyproject.toml  release-please-config.json  schema.json
.github/workflows/: publish.yml  release.yml
src/var2stat/: __init__.py  __main__.py  config.py  generate.py  schema.json
