[project]
name            = "var2stat"
version         = "0.2.0"
description     = "Convert variable fonts to static font instances"
readme          = "README.md"
requires-python = ">=3.14"
dependencies    = [
  "click>=8.3.1",
  "fonttools>=4.62.1",
  "jsonschema>=4.26.0",
]

  [project.scripts]
  var2stat = "var2stat.__main__:cli"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/var2stat"]
